--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crowd-funding",
+  "name": "group-project-2-likin-hikin",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -20,6 +20,7 @@
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.7.6",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
